# agent-reliability-harness

./: .gitignore  ACCEPTANCE-TESTS.md  ARCHITECTURE.md  BENCHMARK-METHODOLOGY.md  BENCHMARK-RESULTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPATIBILITY.md  CONTRIBUTING.md  DECISIONS.md  IMPLEMENTATION-PLAN.md  MANIFEST.in  PLUGIN-SPEC.md  POLICY-SPEC.md  PRODUCT-THESIS.md  README.md  ROADMAP.md  SECURITY.md  SPEC.md  TRACE-SPEC.md  action.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
benchmarks/: run.py
benchmarks/cases/: 01_correct_baseline.json  02_unexpected_argument.json  03_unlisted_tool_allowed_flag.json  04_retry_after_error_ok.json  05_wrong_tool_selection.json  06_forbidden_tool_call.json  07_missing_required_tool.json  08_missing_required_argument.json  09_wrong_argument_type.json  10_wrong_argument_value_enum.json  11_wrong_argument_value_pattern.json  12_wrong_argument_value_range.json  13_incorrect_call_ordering.json  14_correct_answer_bad_trajectory.json  15_duplicate_side_effect.json  16_retry_storm.json  17_ignored_tool_error.json  18_premature_termination.json  19_errored_final_response.json  20_failure_to_terminate.json  21_empty_trace.json  22_grounding_missing_citations.json  23_invalid_citation_url.json  24_non_http_citation_scheme.json  25_secret_exposure.json  26_prompt_injection_propagation.json  27_latency_regression_total.json  28_latency_regression_step.json  29_cost_regression.json  30_excessive_token_use.json  31_token_budget_unverifiable.json  32_max_calls_exceeded.json  33_min_calls_not_met.json  34_duplicate_step_ids.json
benchmarks/tools/: generate_cases.py
docs/: adapters.md  ci.md  concepts.md  maintainers.md  policy-cookbook.md  quickstart.md  regression-testing.md  rules.md  troubleshooting.md
research/: capability-matrix.csv  competitive-landscape.md  source-ledger.md  user-problems.md
samples/: policy.json  policy_trajectory.json
samples/traces/: lead_qualification_pass.json  refund_workflow_double_refund.json  refund_workflow_pass.json  renewal_workflow_budget_violation.json  support_escalation_unsafe.json
schemas/: compare.schema.json  policy.schema.json  report.schema.json  trace.schema.json
src/agent_reliability_harness/: __init__.py  __main__.py  cli.py  models.py  regression.py  report.py  rules.py  validator.py
src/agent_reliability_harness/adapters/: __init__.py  anthropic_messages.py  cohere_chat.py  openai_chat.py
tests/: test_adapters.py  test_adversarial.py  test_argspec.py  test_cli.py  test_cli_compare.py  test_compat_golden.py  test_docs_examples.py  test_models.py  test_regression.py  test_report.py  test_report_formats.py  test_review_fixes.py  test_schemas.py  test_trajectory_rules.py  test_validator.py
tests/fixtures/: anthropic_messages_refund.json  anthropic_messages_tool_error.json  cohere_chat_edge_cases.json  cohere_chat_refund.json  openai_chat_edge_cases.json  openai_chat_refund.json
tools/: generate_rules_doc.py
