[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-reliability-harness"
version = "0.2.0"
description = "Local-first policy and trajectory-regression harness for tool-using AI agents: deterministic trace validation, policy-as-code trajectory rules, baseline-vs-candidate regression gates, and CI-ready JSON/Markdown/JUnit/SARIF reports."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Felmon Fekadu" }]
keywords = [
    "agents",
    "llm",
    "evaluation",
    "reliability",
    "regression-testing",
    "grounding",
    "tool-use",
    "trajectory",
    "policy-as-code",
    "ci",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/felmonon/agent-reliability-harness"
Documentation = "https://github.com/felmonon/agent-reliability-harness/tree/main/docs"
Changelog = "https://github.com/felmonon/agent-reliability-harness/blob/main/CHANGELOG.md"
Issues = "https://github.com/felmonon/agent-reliability-harness/issues"

[project.optional-dependencies]
dev = ["mypy>=1.8", "ruff>=0.5", "jsonschema>=4.21", "build>=1.0"]

[project.scripts]
arh = "agent_reliability_harness.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agent_reliability_harness = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]  # long lines allowed in messages/docstrings; format stays readable

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tests.*"
strict = false
